# ModuleTrace

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  tagging-convention.md
pr-review-bot/: .gitignore  README.md  pyproject.toml
pr-review-bot/src/pr_review_bot/: __init__.py  cli.py  context_builder.py  diff_parser.py  github_client.py  grounding.py  llm.py  models.py  report.py  reviewer.py
pr-review-bot/tests/: test_diff_parser.py  test_grounding.py
src/moduletrace/: cli.py  config.py  pipeline.py
src/moduletrace/schemas/: billing.py  candidate.py  normalized.py  plan.py  rollup.py  terraform.py
src/moduletrace/stages/s1_scanner/: hcp_explorer.py  run.py  state_reader.py
src/moduletrace/stages/s2_normalizer/: run.py
src/moduletrace/stages/s3_billing/: aws.py  azure.py  base.py  gcp.py  run.py
src/moduletrace/stages/s4_rollup/: run.py
src/moduletrace/stages/s5_candidates/: rules.py  run.py
src/moduletrace/stages/s6_plan/: hashing.py  render.py  run.py
src/moduletrace/stages/s7_gate/: approval.py  audit.py  executor.py
src/moduletrace/storage/: run_store.py
src/moduletrace/tagging/: convention.py  gcp_label_codec.py
tests/unit/: test_s6_hashing.py  test_s7_approval.py  test_tagging_convention.py  test_tagging_gcp_codec.py
