[project]
name = "pr-review-bot"
version = "0.1.0"
description = "Review GitHub pull requests with a local LLM (Ollama): deterministic, diff-anchored, verified findings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
pr-review-bot = "pr_review_bot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
